# aozora-proof

./: .editorconfig  .gitignore  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  NOTICE  README.md  SECURITY.md  _typos.toml  bacon.toml  biome.json  bootstrap.sh  cliff.toml  clippy.toml  committed.toml  deny.toml  dev-tools.txt  lefthook.yml  mise.toml  rustfmt.toml  taplo.toml
.config/mise/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  fuzz.yml  release.yml
action/: action.yml
crates/aozora-proof-cli/: Cargo.toml  README.md  build.rs
crates/aozora-proof-cli/src/: main.rs
crates/aozora-proof-core/: Cargo.toml  README.md
crates/aozora-proof-core/examples/: demo.rs
crates/aozora-proof-core/src/: coords.rs  finding.rs  lib.rs  pipeline.rs  rules.rs
crates/aozora-proof-core/src/gaiji_dict/: mod.rs
crates/aozora-proof-core/src/kyuji/: mod.rs
crates/aozora-proof-core/src/moji/: file_checks.rs  mod.rs
crates/aozora-proof-core/tests/: conformance.rs  foundation.rs
crates/aozora-proof-data/: Cargo.toml  README.md  build.rs
crates/aozora-proof-data/data/: aozora-gaiji-chuki.tsv  joyo-kyujitai.tsv
crates/aozora-proof-data/src/: lib.rs
crates/aozora-proof-wasm/: Cargo.toml  README.md
crates/aozora-proof-wasm/src/: lib.rs
docs/: ADR_INDEX.md
docs/adr/: 0001-record-architecture-decisions.md  0002-strict-lint-policy.md  0003-character-facts-belong-upstream.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gaiji.rs  run_all.rs
web/: .gitignore  .prettierignore  README.md  app.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  style.css  vite.config.ts
web/src/lib/: wasm.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
web/src/routes/gaiji/: +page.svelte
