[workspace]
resolver = "3"
members = [
    "crates/aozora-proof-core",
    "crates/aozora-proof-data",
    "crates/aozora-proof-cli",
    "crates/aozora-proof-wasm",
]

[workspace.package]
version       = "0.1.0"
edition       = "2024"
rust-version  = "1.95.0"
license       = "Apache-2.0 OR MIT"
repository    = "https://github.com/P4suta/aozora-proof"
homepage      = "https://github.com/P4suta/aozora-proof"
documentation = "https://p4suta.github.io/aozora-proof/"
authors       = ["aozora-proof contributors"]
readme        = "README.md"
keywords      = ["aozora", "japanese", "proofreading", "jis", "linter"]
categories    = ["text-processing", "localization"]

[workspace.lints.rust]
unsafe_code      = "forbid"
non_ascii_idents = "deny"

unused              = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }

missing_docs                  = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations  = "deny"
unreachable_pub               = "deny"
unused_qualifications         = "deny"
elided_lifetimes_in_paths     = "deny"
unused_lifetimes              = "deny"
single_use_lifetimes          = "deny"
redundant_lifetimes           = "deny"
trivial_casts                 = "deny"
trivial_numeric_casts         = "deny"
let_underscore_drop           = "deny"
meta_variable_misuse          = "deny"
unit_bindings                 = "deny"
variant_size_differences      = "deny"
ambiguous_negative_literals   = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links  = "deny"
private_intra_doc_links = "deny"
bare_urls               = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }

# Restriction lints, enabled deliberately.
allow_attributes_without_reason = "deny"
unwrap_used                     = "deny"
expect_used                     = "deny"
panic                           = "deny"
todo                            = "deny"
unimplemented                   = "deny"
unreachable                     = "deny"
dbg_macro                       = "deny"
indexing_slicing                = "deny"
string_slice                    = "deny"
as_conversions                  = "deny"
clone_on_ref_ptr                = "deny"
lossy_float_literal             = "deny"
rc_buffer                       = "deny"
verbose_file_reads              = "deny"
str_to_string                   = "deny"
mem_forget                      = "deny"

# Allowed: the fix would rename well-named types (Finding) or is outside our
# control (transitive dependency versions).
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[workspace.dependencies]
# The sibling 青空文庫記法 parser, pinned to an immutable commit SHA (v0.4.1); `wire` gives the JSON envelope types.
# Ecosystem policy: pin by rev (not tag) so the dependency cannot drift if a tag is ever moved. SHA = v0.4.1.
aozora = { version = "0.4", git = "https://github.com/P4suta/aozora.git", rev = "a53c632b1d1be4bfcbce7de010ab5b0843e98cc0", features = [
    "wire",
] }

serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
encoding_rs           = "0.8.35"
proptest              = "1.11"
clap                  = { version = "4.5", features = ["derive", "wrap_help"] }
clap_complete         = "4.5"
anstyle               = "1.0"
notify                = "8"
notify-debouncer-mini = "0.7"

# Internal workspace crates.
aozora-proof-core = { version = "0.1.0", path = "crates/aozora-proof-core" }
aozora-proof-data = { version = "0.1.0", path = "crates/aozora-proof-data" }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
opt-level     = 3

[profile.dev.package."*"]
opt-level = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"
